@@ -31,7 +31,6 @@
 #ifndef   	BOX_MANAGER_H_
 # define   	BOX_MANAGER_H_
 
-#include <stdio.h>
 #include "byte_manager.h"
 
 //! box parameters
